Fix empty output state alignment

--- a/src/styles/Utilities.css
+++ b/src/styles/Utilities.css
@@ -1,14 +1,18 @@
 .h1 {
   font-size: 3rem;
+  line-height: 1.25;
 }
 .h2 {
   font-size: 2rem;
+  line-height: 1.25;
 }
 .h3 {
   font-size: 1.5rem;
+  line-height: 1.25;
 }
 .h4 {
   font-size: 1.25rem;
+  line-height: 1.25;
 }
 .italics {
   font-style: italic;
